[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/level/level_end.gd" type="Script" id=1]
[ext_resource path="res://objects/level/mahine1.png" type="Texture" id=2]
[ext_resource path="res://sprites/projectile/heart.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 97, 93.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 12, 6.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9, -55 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 7, -103 )
scale = Vector2( 2.6875, 2.6875 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
